# Data-Analysis

./: .gitignore  Cargo.toml  README.md  main.py  make_plots3.py  pyproject.toml  requirements.txt
cli/: cli_params.py  command_definition.py  commands.py  plotdata.py  plotdata_copy.py
data_analysis/: data_computation copy.py  data_computation.py  data_extraction.py  data_plotting.py  extraction_errors.py  theory.py
data_analysis/experiment/: beam_splitter.py  definitions.py
data_analysis/measurement/: measurement_definitions.py  newport_power_meter.py  thorlabs_power_meter.py
src/: cli.rs  experiment.rs  lib.rs  measurement.rs  tests.rs  trial.rs
src/experiment/: computation.rs  slide.rs  trial.rs
src/measurement/: measurement.rs  newportmodel835powermeter.rs  power_measurement.rs  power_meter.rs  tests.rs  thorlabspm100a.rs
src/measurement/power_meter/: newportmodel835powermeter.rs  thorlabspm100a.rs
tests/: efficiency_vs_incident_angle_correct_output.pkl  efficiency_vs_mirror_angle_correct_output.pkl  power_vs_mirror_angle_correct_output.pkl  test_beam_splitter.py  test_command.py  test_data_computation.py  test_data_extraction.py  test_data_plotting.py  test_newport_power_meter.py  test_thorlabs_power_meter.py  test_trial_definitions.py
