[package]
name = "data-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "data_analysis"

crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
polars = { version = "0.30.0", features = ["csv"] }
pyo3 = {version = "0.18.3", features = ["extension-module"]}
